[gd_scene load_steps=16 format=3 uid="uid://b60bywinfuw4f"]

[ext_resource type="PackedScene" uid="uid://cf57h23ilq1xh" path="res://scenes/enemy_base/enemy_base.tscn" id="1_sxunq"]
[ext_resource type="Texture2D" uid="uid://cq0p4lk2bcs5a" path="res://assets/enemies/flask_wraith.png" id="2_8jalk"]
[ext_resource type="Script" uid="uid://bv0477sbot4h3" path="res://scenes/flask_wraith/flask_wraith.gd" id="2_wrw7b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wrw7b"]
atlas = ExtResource("2_8jalk")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3rlp"]
atlas = ExtResource("2_8jalk")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuuv3"]
atlas = ExtResource("2_8jalk")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mktp6"]
atlas = ExtResource("2_8jalk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ut1y"]
atlas = ExtResource("2_8jalk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhsov"]
atlas = ExtResource("2_8jalk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_low5x"]
atlas = ExtResource("2_8jalk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r4na"]
atlas = ExtResource("2_8jalk")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncaj"]
atlas = ExtResource("2_8jalk")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_srise"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrw7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3rlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuuv3")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mktp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ut1y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhsov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_low5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r4na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncaj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jalk"]
size = Vector2(9, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrw7b"]
size = Vector2(9, 12)

[node name="FlaskWraith" instance=ExtResource("1_sxunq")]
script = ExtResource("2_wrw7b")
points = 200

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_srise")
animation = &"attack"
autoplay = "walk"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_8jalk")

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_wrw7b")

[node name="FloorDetection" type="RayCast2D" parent="." index="4"]
position = Vector2(5, 0)
target_position = Vector2(0, 11)

[node name="AttackTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true

[node name="WaitTimer" type="Timer" parent="." index="6"]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
